--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-          <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+          <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar ">
             <div class="container">
               <a class="navbar-brand" href="#"><strong>COMIDAS</strong></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,11 +31,6 @@
                     <a class="nav-link" href="#">Login</a>
                   </li>
                 </ul>
-                <!--<form class="form-inline">
-                  <div class="md-form my-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                  </div>
-                </form>-->
               </div>
             </div>
           </nav>
@@ -44,20 +39,46 @@
           <div class="view" style="background-image: url('img/home/banner01.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
             <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
               <div class="container">
-                <div class="row">
-                  <div class="col-md-12 mb-4 white-text text-center">
-                    <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>Elija su menu de comida</strong></h1>
+                <div class="row d-flex justify-content-center align-items-center">
+                  <!-- <div class="col-md-12 mb-4  col-md-4 white-text text-center"> -->
+					<div class="col-xs-12 col-sm-6 mb-4 col-lg-8 white-text text-center">
+                    <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0  pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>Elija el menu de su comida</strong></h1>
                     <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
                     <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Cenas & Almuerzos</strong></h5>
-                    <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Menus</a>
-                    <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Servicios</a>
-                  </div>               
+                    <a class="btn border border-light  black wow fadeInDown" data-wow-delay="0.4s">Menus</a>
+                    <a class="btn border border-light  black wow fadeInDown" data-wow-delay="0.4s">Servicios</a>
+				  </div> 
+				  
+				  <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
+						<form class="text-center border border-light p-3 bg-white rounded mb-0 ">
+							<p class="h4 mb-4">Login</p>
+							<input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+							<input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+							<div class="d-flex justify-content-around">
+								<div>
+									<div class="custom-control custom-checkbox">
+										<input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+										<label class="custom-control-label" for="defaultLoginFormRemember">Recordarme</label>
+									</div>
+								</div>
+								<div>
+									<a href="">Perdió su contraseña</a>
+								</div>
+							</div>
+							<button class="btn btn-info btn-block my-4" type="submit">Entrar</button>
+							<p>¿No eres miembro aún?
+								<a href="">Registrarse</a>
+							</p>
+						</form>
+				  </div>
+
                 </div>          
               </div>   
             </div>   
           </div>
     </header>
-     
+
+
     <div class="container-fluid">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
