--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/mdb.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -67,7 +68,7 @@
 							</div>
 							<button class="btn btn-info btn-block my-4" type="submit">Entrar</button>
 							<p>¿No eres miembro aún?
-								<a href="">Registrarse</a>
+								<a href="" data-toggle="modal" data-target="#modalLRFormDemo" >Registrarse</a>
 							</p>
 						</form>
 				  </div>
@@ -147,7 +148,80 @@
                 <div class="col-3">Peralta Christian - Prada Alexander - Martin Garra</div>
             </div>
         </div>
-    </footer>
+	</footer>
+	
+	<!-- MODALES -->
+	<!-- Central Modal Small -->
+	<div class="modal fade" id="modalLRFormDemo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: none;" aria-hidden="true">
+			<div class="modal-dialog " role="document">
+			  <!--Content-->
+			  <div class="modal-content">
+		
+				<!--Modal cascading tabs-->
+				<div class="modal-c-tabs">
+		
+				  <!-- Nav tabs -->
+				  <ul class="nav nav-tabs tabs-2 light-blue darken-3" role="tablist">
+					<li class="nav-item waves-effect waves-light">
+					  <a class="nav-link active" data-toggle="tab" href="#panel17" role="tab">
+						<i class="fa fa-user mr-1"></i> Registro</a>
+					  </li>
+				  </ul>
+		
+				  <!-- Tab panels -->
+				  <div class="tab-content">
+					<!--Panel 17-->
+					<div class="tab-pane fade in show active" id="panel17" role="tabpanel">
+		
+					  <!--Body-->
+					  <div class="modal-body mb-1">
+						<div class="md-form form-sm">
+						  <i class="fa fa-envelope prefix"></i>
+						  <input type="text" id="form2" class="form-control form-control-sm">
+						  <label for="form2">Your email</label>
+						</div>
+		
+						<div class="md-form form-sm">
+						  <i class="fa fa-lock prefix"></i>
+						  <input type="password" id="form3" class="form-control form-control-sm">
+						  <label for="form3">Your password</label>
+						</div>
+						<div class="md-form form-sm">
+							<i class="fa fa-lock prefix"></i>
+							<input type="password" id="form6" class="form-control form-control-sm">
+							<label for="form6">Repeat password</label>
+						</div>
+						<div class="md-form form-sm">
+							<i class="fa fa-phone prefix"></i>
+							<input type="Text" id="form71" class="form-control form-control-sm">
+							<label for="form71">Teléfono</label>
+						</div>
+						<div class="md-form form-sm">
+						<!-- <label>Subject</label> -->
+						<select class="browser-default custom-select mb-4">
+							<option value="" disabled>Elija su opción</option>
+							<option value="1" selected>Comercio</option>
+							<option value="2">Delivery</option>
+							<option value="3">Cliente</option>
+						</select>
+						</div>	  
+
+						<div class="text-center mt-4">
+						  <button class="btn btn-info waves-effect btn-deep-orange">Registrarse
+							<i class="fa fa-sign-in ml-1"></i>
+						  </button>
+						  <button class="btn btn-info waves-effect " data-dismiss="modal" aria-label="Close" class="">Salir
+								<i class="fa fa-sign-noutml-1"></i>
+						   </button>
+						</div>
+					  </div>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <!--/.Content-->
+			</div>
+		  </div>
 	
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
