agregacion de la galeria

--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -80,32 +80,82 @@
     </header>
 
 
-    <div class="container-fluid">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt sint sit cupiditate fugiat, eos laudantium suscipit ad, inventore magnam est incidunt ut ea dolores temporibus, eveniet nam architecto numquam?</p>
-        
-    </div>
+    <section id="galeria" class="galeria mt-5">
+		<h2 class="text-center">Menus</h2>
+		<p class="text-center">Mire alguno de nuestros diferentes deliciosos menus</p>
+		<div class="container">
+			<div class="row">
+			  <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+					<div class="card">
+						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
+						<div class="card-body">
+						<h4 class="card-title float-left pt-3"><a>Pizza de Muzzarella</a></h4>
+						<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+						<!-- <a href="#" class="btn btn-primary">Button</a> -->
+						<span class="text-info float-right p-3 block-example border border-warning">$250</span>
+						</div>
+					</div>
+			  </div>
+			  <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+					<div class="card">
+						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
+						<div class="card-body">
+							<h4 class="card-title float-left pt-3"><a>Pizza de Muzzarella</a></h4>
+							<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+							<!-- <a href="#" class="btn btn-primary">Button</a> -->
+							<span class="text-info float-right p-3 block-example border border-warning">$250</span>
+						</div>
+					</div>
+			  </div>
+			  <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+					<div class="card">
+						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
+						<div class="card-body">
+							<h4 class="card-title float-left pt-3"><a>Pizza de Muzzarella</a></h4>
+							<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+							<!-- <a href="#" class="btn btn-primary">Button</a> -->
+							<span class="text-info float-right p-3 block-example border border-warning">$250</span>
+						</div>
+					</div>
+			  </div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+					<div class="card">
+						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
+						<div class="card-body">
+							<h4 class="card-title float-left pt-3"><a>Pizza de Muzzarella</a></h4>
+							<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+							<!-- <a href="#" class="btn btn-primary">Button</a> -->
+							<span class="text-info float-right p-3 block-example border border-warning">$250</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+					<div class="card">
+						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
+						<div class="card-body">
+							<h4 class="card-title float-left pt-3"><a>Pizza de Muzzarella</a></h4>
+							<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+							<!-- <a href="#" class="btn btn-primary">Button</a> -->
+							<span class="text-info float-right p-3 block-example border border-warning">$250</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+					<div class="card">
+						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
+						<div class="card-body">
+							<h4 class="card-title float-left pt-3"><a>Pizza de Muzzarella</a></h4>
+							<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+							<!-- <a href="#" class="btn btn-primary">Button</a> -->
+							<span class="text-info float-right p-3 block-example border border-warning">$250</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section> 
 
 <footer class="page-footer font-small unique-color-dark pt-4">
     <div class="container">
