agregacion de promocion

--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -79,6 +79,29 @@
           </div>
     </header>
 
+	<div class="py-5 mb-5" id="content-01" style="background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),url('img/home/promocion/promocion01.jp') center center; background-size: cover;">
+		<div class="container d-flex flex-column" style="max-height: 800px;">
+			<div class="row my-auto">
+				<!-- <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12 py-4"> -->
+				<figure class="figure m-auto">
+					<img src="img/home/promocion/promocion02.jpg" class="figure-img img-fluid z-depth-1" alt="..." style="width: 500px">
+				</figure>
+						<!-- </div> -->
+				<div class="col-lg-4 col-md-10 col-sm-12 m-auto py-4 pt-5">
+					<!-- <img class="mb-4" src="img/art-1.png" height="48px"> -->
+					<h1 class="display-4 mb-0 pb-0" style="font-size: 1.3em">Oferta Del Día</h1>
+					<hr class="my-4">
+					<p class="lead pb-4">Hamburguesa completa con huevo y papas fritas.</p>
+					<span class="text-in float-right p-3 block-example border border-warning">$99.99</span>
+
+					<a class="btn btn-deep-orange btn-lg waves-effect waves-light" data-toggle="modal" data-target="#exampleModal" href="#">Hacer Pedido
+						<i class="fa fa-angle-right ml-3"></i>
+					</a>
+				</div>
+				
+			</div>
+		</div>
+	</div>
 
     <section id="galeria" class="galeria mt-5">
 		<h2 class="text-center">Menus</h2>
@@ -233,7 +256,7 @@
 						 
 
 						<div class="text-center mt-4">
-						  <button class="btn btn-info waves-effect btn-deep-orange">Registrarse
+						  <button class="btn waves-effect btn-deep-orange">Registrarse
 							<i class="fa fa-sign-in ml-1"></i>
 						  </button>
 						  <button class="btn btn-info waves-effect " data-dismiss="modal" aria-label="Close" class="">Salir
