--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -103,12 +103,23 @@
 		</div>
 	</div>
 
-    <section id="galeria" class="galeria mt-5">
+    <section id="galeria" class="galeria mt-5 mb-5">
 		<h2 class="text-center">Menus</h2>
 		<p class="text-center">Mire alguno de nuestros diferentes deliciosos menus</p>
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
-			  <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+			   <div class="col-xs-12 col-sm-6 col-md-3 mb-4">
+					<div class="card">
+						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
+						<div class="card-body">
+						<h4 class="card-title float-left pt-3"><a>Pizza de Muzzarella</a></h4>
+						<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+						<!-- <a href="#" class="btn btn-primary">Button</a> -->
+						<span class="text-info float-right p-3 block-example border border-warning">$250</span>
+						</div>
+					</div>
+				</div>
+			  <div class="col-xs-12 col-sm-6 col-md-3 mb-4">
 					<div class="card">
 						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
 						<div class="card-body">
@@ -119,7 +130,7 @@
 						</div>
 					</div>
 			  </div>
-			  <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+			  <div class="col-xs-12 col-sm-6 col-md-3 mb-4">
 					<div class="card">
 						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
 						<div class="card-body">
@@ -130,7 +141,7 @@
 						</div>
 					</div>
 			  </div>
-			  <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+			  <div class="col-xs-12 col-sm-6 col-md-3 mb-4">
 					<div class="card">
 						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
 						<div class="card-body">
@@ -143,7 +154,7 @@
 			  </div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+				<div class="col-xs-12 col-sm-6 col-md-3 mb-4">
 					<div class="card">
 						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
 						<div class="card-body">
@@ -154,7 +165,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+				<div class="col-xs-12 col-sm-6 col-md-3 mb-4">
 					<div class="card">
 						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
 						<div class="card-body">
@@ -165,7 +176,18 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+				<div class="col-xs-12 col-sm-6 col-md-3 mb-4">
+					<div class="card">
+						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
+						<div class="card-body">
+							<h4 class="card-title float-left pt-3"><a>Pizza de Muzzarella</a></h4>
+							<!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+							<!-- <a href="#" class="btn btn-primary">Button</a> -->
+							<span class="text-info float-right p-3 block-example border border-warning">$250</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-3 mb-4">
 					<div class="card">
 						<img class="card-img-top" src="img/home/galeria/galeria01.jpg" alt="pizza">
 						<div class="card-body">
@@ -180,7 +202,53 @@
 		</div>
 	</section> 
 
-<footer class="page-footer font-small unique-color-dark pt-4">
+	<section id="contacto" class="mb-4">
+		<h2 class="text-center">Contactos</h2>
+		<p class="text-center">Su consulta no molesta</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-md-6 col-lg-4">
+					<!-- Default form contact -->
+					<form class="text-center border border-light p-5 mb-4">
+						<p class="h4 mb-4">Contáctenos</p>
+						<!-- Name -->
+						<input type="text" id="defaultContactFormName" class="form-control mb-4" name="nombre" placeholder="Nombre">
+						<!-- Email -->
+						<input type="email" id="defaultContactFormEmail" class="form-control mb-4" name="email" placeholder="E-mail">
+						<!-- Subject -->
+						<label>Subject</label>
+						<select class="browser-default custom-select mb-4">
+							<option value="" disabled>Elija su opción</option>
+							<option value="1" selected>Feedback</option>
+							<option value="2">Reportar mal servivio</option>
+							<!-- <option value="3">Feature request</option>
+							<option value="4">Feature request</option> -->
+						</select>
+
+						<!-- Message -->
+						<div class="form-group">
+							<textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" name="mensaje" placeholder="Mensaje"></textarea>
+						</div>
+
+						<!-- Copy -->
+						<div class="custom-control custom-checkbox mb-4">
+							<input type="checkbox" class="custom-control-input" id="defaultContactFormCopy">
+							<label class="custom-control-label" for="defaultContactFormCopy">Enviarme una copia de este mensaje</label>
+						</div>
+
+						<!-- Send button -->
+						<button class="btn btn-info btn-block" type="submit">Enviar</button>
+
+					</form>
+					<!-- Default form contact -->
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-8 mb-4">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.3987009069774!2d-58.564793985276864!3d-34.66988558044238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc62cc3e02599%3A0x5f178c9d980d3f8b!2sFlorencio+Varela+1903%2C+B1754JEC+San+Justo%2C+Pcia+de+Buenos+Aires!5e0!3m2!1ses-419!2sar!4v1539750387378" width="100%" height="565" frameborder="0" style="border:0" allowfullscreen></iframe>				</div>
+			</div>
+		</div>
+	</section>
+
+  <footer class="page-footer font-small unique-color-dark pt-4">
     <div class="container">
       <ul class="list-unstyled list-inline text-center py-2">
         <li class="list-inline-item">
@@ -202,11 +270,9 @@
 	<div class="modal fade" id="modalLRFormDemo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: none;" aria-hidden="true">
 			<div class="modal-dialog " role="document">
 			  <!--Content-->
-			  <div class="modal-content">
-		
+			  <div class="modal-content">		
 				<!--Modal cascading tabs-->
 				<div class="modal-c-tabs">
-		
 				  <!-- Nav tabs -->
 				  <ul class="nav nav-tabs tabs-2 light-blue darken-3" role="tablist">
 					<li class="nav-item waves-effect waves-light">
@@ -214,13 +280,10 @@
 						<i class="fa fa-user mr-1"></i> Registro</a>
 					  </li>
 				  </ul>
-		
 				  <!-- Tab panels -->
 				  <div class="tab-content">
 					<!--Panel 17-->
-
 					<div class="tab-pane fade in show active" id="panel17" role="tabpanel">
-						
 					  <!--Body-->
 					  <div class="modal-body mb-1">
 							<div class="md-form form-sm">
@@ -253,8 +316,6 @@
 							<input type="Text" id="form71" class="form-control form-control-sm">
 							<label for="form71">Teléfono</label>
 						</div>
-						 
-
 						<div class="text-center mt-4">
 						  <button class="btn waves-effect btn-deep-orange">Registrarse
 							<i class="fa fa-sign-in ml-1"></i>
