--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -77,9 +77,37 @@
               </div>   
             </div>   
           </div>
-    </header>
+	</header>
+	
+	<section class="servicios mt-5 mb-5 " id="servicios">
+			<h2 class="text-center p-2">Servicios</h2>
+			<div class="container mt-5">
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-4">
+						<span class="text-center d-block  p-2 text-warning fa fa-shopping-bag fa-5x"></span>
+						<h4 class="p-2 text-center">Comercios</h4>
+						<p class="p-2 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, accusamus!
+						</p>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-4">
+						<span class="text-center p-2 d-block fa fa-users fa-5x text-success" aria-hidden="true"></span>
+						<h4 class="p-2 text-center">Clientes</h4>
+						<p class="p-2 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, accusamus!
+						</p>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-4">
+							<span class="text-center d-block p-2 fa fa-motorcycle fa-5x text-warning"></span>
+							<h4 class="p-2 text-center">Delivery</h4>
+							<p class="p-2 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, accusamus!
+							</p>
+					</div>
+					<div class="colum-sm-12"></div>
+					<div class="colum-sm-12"></div>
+				</div>
+			</div>
+		 </section>
 
-	<div class="py-5 mb-5" id="content-01" style="background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),url('img/home/promocion/promocion01.jp') center center; background-size: cover;">
+	<div class="grey lighten-2 py-5 mb-5" id="content-01" style="background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),url('img/home/promocion/promocion01.jp') center center; background-size: cover;">
 		<div class="container d-flex flex-column" style="max-height: 800px;">
 			<div class="row my-auto">
 				<!-- <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12 py-4"> -->
