creacion de la carpeta public la cual contiene todos los css, js, img , fonts. completo la vista home y creo carpeta llamada  home la que contendra las diferentes partes del home como banner, servicios, contacto etc

--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/mdb.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
@@ -90,7 +90,7 @@
 						</p>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
-						<span class="text-center p-2 d-block fa fa-users fa-5x text-success" aria-hidden="true"></span>
+						<span class="text-center p-2 d-block fa fa-users fa-5x text-warning" aria-hidden="true"></span>
 						<h4 class="p-2 text-center">Clientes</h4>
 						<p class="p-2 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, accusamus!
 						</p>
@@ -110,13 +110,10 @@
 	<div class="grey lighten-2 py-5 mb-5" id="content-01" style="background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),url('img/home/promocion/promocion01.jp') center center; background-size: cover;">
 		<div class="container d-flex flex-column" style="max-height: 800px;">
 			<div class="row my-auto">
-				<!-- <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12 py-4"> -->
 				<figure class="figure m-auto">
 					<img src="img/home/promocion/promocion02.jpg" class="figure-img img-fluid z-depth-1" alt="..." style="width: 500px">
 				</figure>
-						<!-- </div> -->
 				<div class="col-lg-4 col-md-10 col-sm-12 m-auto py-4 pt-5">
-					<!-- <img class="mb-4" src="img/art-1.png" height="48px"> -->
 					<h1 class="display-4 mb-0 pb-0" style="font-size: 1.3em">Oferta Del Día</h1>
 					<hr class="my-4">
 					<p class="lead pb-4">Hamburguesa completa con huevo y papas fritas.</p>
